Fix z-index issue

--- a/website/styles/style.css
+++ b/website/styles/style.css
@@ -29,20 +29,22 @@ body {
 }
 
 .searchSection,
-.addMovieForm {
+.addMovieSection {
     width: 100%;
     flex-shrink: 0;
     opacity: 0;
+    z-index: -1;
     transition: opacity 200ms;
 }
 
-.addMovieForm {
+.addMovieSection {
     margin-left: -100%;
 }
 
 .sections.search .searchSection,
-.sections.addMovie .addMovieForm {
+.sections.addMovie .addMovieSection {
     opacity: 1;
+    z-index: 1;
     transition: opacity 200ms 200ms;
 }
 
